# empower

./: README.md  pyproject.toml
empower/: __init__.py  _class.py  _core.py  _decorator.py  _trait.py  utils.py
example/: main.py
example/mod/: __init__.py  fly.py  run.py
tests/: test_empower.py  test_utils.py
tests/fixture/: dog.py
tests/fixture/traits/: bark.py  run.py
tests/test_dynamic_impl/: __init__.py  fly.py  run.py  test_fly.py  test_fly_and_run.py  test_run.py
