[tool.poetry]
name = "empower"
version = "0.1.0"
description = "Goodbye Inheritance"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
isort = "^4.3"
ipython = "^7.8"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
