[tool.poetry]
name = "empower"
packages = [{ include = "empower" }]
version = "0.2.0"
description = "Goodbye Inheritance"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
wrapt = "^1.11"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
isort = "^4.3"
ipython = "^7.8"
ipdb = "^0.12.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
